# SeaBattle

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Field/: CMakeLists.txt  Field.cpp  Field.h  MyField.cpp  MyField.h  Ship.cpp  Ship.h
lib/SeaBattleInterface/: CMakeLists.txt  GameInterface.cpp  GameInterface.h  SeaBattle.cpp  SeaBattle.h
lib/Strategy/: CMakeLists.txt  CustomStrategy.cpp  CustomStrategy.h  OrderedStrategy.cpp  OrderedStrategy.h  Strategy.cpp  Strategy.h
